Problem with fccompat for Windows 64bit
I have problem compiling ffmpeg. This library has many plugins including fontconfig. https://github.com/Jamaika1/plugins_ffmpeg_vvc_evc_htj2k I use gcc 11.3.1 under Windows. I don't use POSIX. I'm leaving aside the fact why I don't use MSVC but some gcc. I managed to create librsvg (c) {glib, libxml2, cairo, pango, croco, harfbuzz, libffi, lzma, pixman, fribidi, freetype, fonconfig} Not everything is compatible with each other but it works only with pthread win32. http://msystem.waw.pl/x265/mingw-gcc1131-20221227.7z
Using built-in specs.
COLLECT_GCC=gcc.exe
Target: x86_64-w64-mingw32
Configured with: /home/ma/m/source/gcc-g/configure --host=x86_64-w64-mingw32 --target=x86_64-w64-mingw32 --disable-nls --enable-languages=c,c++,objc,obj-c++ --with-gmp=/home/ma/m/build/for_target --with-mpfr=/home/ma/m/build/for_target --with-mpc=/home/ma/m/build/for_target --with-isl=/home/ma/m/build/for_target --enable-twoprocess --disable-libstdcxx-pch --disable-win32-registry --disable-shared --enable-fully-dynamic-string --enable-libssp --prefix=/home/ma/m/target --with-sysroot=/home/ma/m/target
Thread model: win32
Supported LTO compression algorithms: zlib
gcc version 11.3.1 20221227 (GCC)
COLLECT_GCC_OPTIONS='-v' '-std=gnu11' '-static' '-march=x86-64-v2' '-ftree-vectorize' '-g0' '-O3' '-fPIC' '-mavx' '-mxsave' '-mpclmul' '-maes' '-D' 'HAVE_CONFIG_H=1' '-D' 'LIBXML_STATIC=1' '-D' 'HAVE_PTHREAD=1' '-D' 'PTW32_STATIC_LIB=1' '-c' '-o' 'fccompat.o'
c:/gcc1131/bin/../libexec/gcc/x86_64-w64-mingw32/11.3.1/cc1.exe -quiet -v -iprefix c:\gcc1131\bin\../lib/gcc/x86_64-w64-mingw32/11.3.1/ -U_REENTRANT -D HAVE_CONFIG_H=1 -D LIBXML_STATIC=1 -D HAVE_PTHREAD=1 -D PTW32_STATIC_LIB=1 fccompat.c -quiet -dumpbase fccompat.c -dumpbase-ext .c -march=x86-64-v2 -mavx -mxsave -mpclmul -maes -g0 -O3 -std=gnu11 -version -ftree-vectorize -fPIC -o C:\Users\KOMPUT~1\AppData\Local\Temp\ccMwfaoe.s
GNU C11 (GCC) version 11.3.1 20221227 (x86_64-w64-mingw32)
compiled by GNU C version 11.3.1 20221227, GMP version 6.2.1, MPFR version 4.1.1, MPC version 1.3.1, isl version isl-0.24-GMP
GGC heuristics: --param ggc-min-expand=100 --param ggc-min-heapsize=131072
ignoring duplicate directory "c:/gcc1131/lib/gcc/../../lib/gcc/x86_64-w64-mingw32/11.3.1/include"
ignoring nonexistent directory "/home/ma/m/target/home/ma/m/target/lib/gcc/x86_64-w64-mingw32/11.3.1/../../../../include"
ignoring duplicate directory "c:/gcc1131/lib/gcc/../../lib/gcc/x86_64-w64-mingw32/11.3.1/include-fixed"
ignoring duplicate directory "c:/gcc1131/lib/gcc/../../lib/gcc/x86_64-w64-mingw32/11.3.1/../../../../x86_64-w64-mingw32/include"
ignoring nonexistent directory "/home/ma/m/target/mingw/include"
#include "..." search starts here:
#include <...> search starts here:
c:\gcc1131\bin\../lib/gcc/x86_64-w64-mingw32/11.3.1/include
c:\gcc1131\bin\../lib/gcc/x86_64-w64-mingw32/11.3.1/include-fixed
c:\gcc1131\bin\../lib/gcc/x86_64-w64-mingw32/11.3.1/../../../../x86_64-w64-mingw32/include
End of search list.
GNU C11 (GCC) version 11.3.1 20221227 (x86_64-w64-mingw32)
compiled by GNU C version 11.3.1 20221227, GMP version 6.2.1, MPFR version 4.1.1, MPC version 1.3.1, isl version isl-0.24-GMP
GGC heuristics: --param ggc-min-expand=100 --param ggc-min-heapsize=131072
Compiler executable checksum: 5420e077fea7a2295c6c6b4505a0f6e1
fccompat.c:86:13: error: conflicting types for 'mode_t'; have 'int'
86 | typedef int mode_t;
| ^~~~~~
In file included from fcint.h:47,
from fccompat.c:28:
c:\gcc1131\x86_64-w64-mingw32\include\sys\types.h:77:17: note: previous declaration of 'mode_t' with type 'mode_t' {aka 'short unsigned int'}
77 | typedef _mode_t mode_t;
| ^~~~~~
Edited by Jamaika1