Fix build issue on MinGW

Fixes https://gitlab.freedesktop.org/fontconfig/fontconfig/-/issues/384